--- a/app/views/profiles/_full_profile.html.erb
+++ b/app/views/profiles/_full_profile.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
 <div class ="span6">
 <p id="notice"><%= notice %></p>
-<h4><u>Anonymous profile</u></h4>
-<b>Last updated:</b> <%= time_ago_in_words(@profile.updated_at)%> ago <%=  link_to ' | Edit', edit_profile_path(@profile) if current_candidate && current_candidate.profile == @profile %>
+<h4>Anonymous BriefCV</h4>
+<b>Last updated:</b> <%= time_ago_in_words(@profile.updated_at)%> ago
 <br><br>  
-<h5><u>Job status</u></h5>
+<h5>Job status</h5>
 <table class="table table-striped">
 
     <tbody>
@@ -27,7 +27,7 @@
 		</tr>
 	</tbody>
 </table>
-<h5><u>Job history</u></h5>
+<h5>Job history</h5>
 <table class="table table-striped">
   	<% if @profile.current_platforms %>
 		<tbody>
@@ -106,7 +106,7 @@
 	<%end%>
 </table>
 
-<h5><u>Education</u></h5>
+<h5>Education</h5>
 
 
 <% if @profile.undergrad_degree == true %>
@@ -166,7 +166,7 @@
 </table>
 
 <%end%>
-<h5><u>Standardized test scores</u></h5>
+<h5>Standardized test scores</h5>
 <table class="table table-striped">
 	<tbody>
 	    	<% if @profile.sat_math %>
