--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,8 +1,4 @@
-<h3>Edit your 100% anonymous profile</h3>
+<h4>Edit your 100% anonymous BriefCV</h4>
 <br>
 
 <%= render 'form' %>
-    
-<%= link_to 'Destroy', @profile, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Show', @profile %> |
-<%= link_to 'Back', profiles_path %>
