--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -12,11 +12,11 @@ Company website:
 <b><%= @invitation.user.website %></b>
 <br>
 Created:
-<b><%= @invitation.created_at.to_s %></b>
+<b><%= time_ago_in_words(@invitation.created_at) %> ago</b>
 <br>
 <br><br>
 <% if @invitation.approval %>
-	<b>You accepted this request at <%= @invitation.approval.created_at.to_s %></b>
+	<b>You accepted this request <%= time_ago_in_words(@invitation.approval.created_at)%> ago.</b>
 <%else%>
 	<%= button_to "Accept this request", :action => "accept" %>
 	<h5> If you accept, your name, email address, and Facebook url will be submitted to <%= @invitation.user.company_name %>. </h5>
