set up transactional emails

--- a/app/views/profiles/_details.html.erb
+++ b/app/views/profiles/_details.html.erb
@@ -1,4 +1,4 @@
-<h4><u>Contact details</u></h4>
+<h4>Contact details</h4>
 Name: <b> <%= @profile.candidate.name %></b>
 <br>
 Email: <b> <%= @profile.candidate.email %></b>
