--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BriefCV</title>
+  <title>TapCV</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="row">
   			<div class="span2">
-          <h2><%= link_to "BriefCV", root_path %></h2>
+          <h2><%= link_to "TapCV", root_path %></h2>
         </div>
         <div class="span6">  
           <br>
