--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -4,7 +4,7 @@
 Company:
 <b><%= @invitation.user.company_name %>
 <% if @invitation.user.verified == true %>
-(verified by BriefCV)
+(verified by TapCV)
 <%end%>
 </b>
 <br>
