--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
             <%= link_to "Sign out", signout_path, id: "sign_out" %>
             <br>
             <% if current_candidate.profile %>
-              <%= link_to 'Edit your BriefCV', edit_profile_path(current_candidate.profile) %> | 
+              <%= link_to 'Edit your TapCV', edit_profile_path(current_candidate.profile) %> | 
               <%= link_to 'View', current_candidate.profile %>
               <%else%>
-              <%= link_to 'Create your BriefCV (your 100% anonymous profile)', new_profile_path %>
+              <%= link_to 'Create your TapCV (your 100% anonymous profile)', new_profile_path %>
             <%end%>
           <% elsif current_user %>
              Recruiter: Logged in as <strong><%= current_user.email %></strong>.
@@ -45,7 +45,7 @@
         <footer>
         <div class="span12">
           <br><br>
-          BriefCV © 2013
+          TapCV © 2013
           <br><br>
         </div>
         </footer>
