--- a/app/views/profiles/_full_profile.html.erb
+++ b/app/views/profiles/_full_profile.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 <div class ="span6">
 <p id="notice"><%= notice %></p>
-<h4>Anonymous BriefCV</h4>
+<h4>Anonymous TapCV</h4>
 <b>Last updated:</b> <%= time_ago_in_words(@profile.updated_at)%> ago
 <br><br>  
 <h5>Job status</h5>
