--- a/app/views/candidate_mailer/invitation.html.erb
+++ b/app/views/candidate_mailer/invitation.html.erb
@@ -4,7 +4,7 @@
 Company:
 <b><%= @invitation.user.company_name %>
 <% if @invitation.user.verified == true %>
-(verified by BriefCV)
+(verified by TapCV)
 <%end%>
 </b>
 <br>
@@ -19,7 +19,8 @@ Created:
 	<b>You accepted this request <%= time_ago_in_words(@invitation.approval.created_at)%> ago.</b>
 <%else%>
 	<%= link_to "Accept this request", accept_invitation_url(@invitation) %>
-	<h5> If you accept, your name, email address, and Facebook url will be submitted to the contact person at <%= @invitation.user.company_name %>. </h5>
+	<br><br>
+	 If you accept, your name, email address, and Facebook url will be submitted to the contact person at <%= @invitation.user.company_name %>. 
 <%end%>
 
 
@@ -28,6 +29,6 @@ Created:
 <br><br><br>
 Yours,
 <br><br>
-The BriefCV Team
+The TapCV Team
 
 
