--- a/app/views/candidate_mailer/signup.html.erb
+++ b/app/views/candidate_mailer/signup.html.erb
@@ -1,13 +1,13 @@
-Welcome to BriefCV 
+Welcome to TapCV 
 <br><br>
-BriefCV gets you more interview requests by interesting companies! 
+TapCV gets you more interview requests by interesting companies! 
 <br><br>
 <% unless @candidate.profile %>
-<b><%= link_to "Get started now by creating your 100% anonymous BriefCV", new_profile_url %></b>
+<b><%= link_to "Get started now by creating your 100% anonymous TapCV", new_profile_url %></b>
 <br><br>
 
 <%end%>
 
 Yours,
 <br><br>
-The BriefCV Team  
+The TapCV Team  
