completed invoice emails

--- a/app/views/user_mailer/receipt.html.erb
+++ b/app/views/user_mailer/receipt.html.erb
@@ -1,24 +1,20 @@
 Dear <%= @user.contact_person %>:
 <br>
 <br>
-<br>
-This is a receipt for your approved request for contact details for profile id:<%= @profile.id %>. 
-<br>This is only a receipt, no payment is due. 
-<br>If you have any questions, please contact us anytime at support@tapcv.com. 
-<b>Thank you for your business!
+This is a receipt for your approved request for contact details for a candidate profile. 
+This is only a receipt, no payment is due. If you have any questions, please contact us anytime at support@tapcv.com. Thank you for your business!
 <br>
 <br>
+-------------------------------------------------<br>
+TapCV RECEIPT - <%= @approval.created_at.strftime("%d %b %Y - %-I:%M%p %Z") %><br>
 <br>
-TapCV RECEIPT $4.95
+User: <%= @user.contact_person %>, <%= @user.company_name %> <br>
+Item: Approved request for profile id: <%= @profile.id %><br>
+Amount: USD $<%= @amount %>*<br>
 <br><br>
-For account: <%= @user.contact_person %>, <%= @user.email %>
-<br><br>
-Paid on date: <%= @approval.created_at %>
-<br><br>
---------------------------------------------------------------
-<br><br>
-Approved request for profile id:<%= @profile.id %>                                      $4.95
-<br><br>
---------------------------------------------------------------
-<br><br>
-Total Charged:                                         $4.95
+TapCV Inc.<br>
+1052 High St.<br>
+Palo Alto, CA 94301<br>
+<br>
+* EU customers: prices exclude VAT<br>
+-------------------------------------------------<br>
