--- a/app/views/profiles/confirm.html.erb
+++ b/app/views/profiles/confirm.html.erb
@@ -28,7 +28,7 @@ If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you wil
       StripeCheckout.open({
         key:         "<%= Rails.configuration.stripe[:publishable_key] %>",
         name:        'Submit your payment details',
-        description: 'You will get charged $4.95 USD only if the candidate accepts your request.',
+        description: 'You will get charged $4.95 USD if the candidate accepts your request.',
         panelLabel:  'Submit',
         token:       token
       });
