--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -13,3 +13,15 @@
 footer {
 	font-size: 13px;
 }
+
+.slim_module {
+	border-top: 1px solid #e5e5e5;
+	padding-top: 30px;
+	padding-bottom: 10px;
+}
+
+.module {
+	border-top: 2px solid #e5e5e5;
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
