--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,89 +1,71 @@
 <%= simple_nested_form_for(@profile, :html => {:class => 'form-horizontal'}) do |f| %>
-  <%= f.error_notification %>
+  	<%= f.error_notification %>
 
-  <div class="form-inputs">
-<b>You job status</b><br><br>
-	<%= f.input :silicon_valley, label: "Are you interested in full-time positions as an iOS developer in Silicon Valley?", inline_label: 'Yes' %>
-	<%= f.input :work_permit, label: 'Your are permitted to work in the US?', inline_label: 'Yes, I am a citizen, resident, greencard or work-visa holder.' %>
-	<%= f.input :general_min_yearly_salary, label: 'Your minimum desired annual salary (USD)', placeholder: 'e.g. "65000"'%>
-  	<%= f.input :notice_period, label: 'How quickly could you start (in weeks)?', placeholder: 'e.g. "3"'%>
- 
-<br>
-<b> Your iOS apps </b>
-<br><br> 
-<%= f.input :ios_apps, label: 'Number of iOS apps published in the app-store that you built yourself, not in a team', placeholder: 'e.g. "5"' %>
-<%= f.input :ios_years, label: 'Number of year of experience programming iOS apps', placeholder: 'e.g. "2.5"' %>
-<br>
-<%= f.fields_for :jobs do |job_form| %>
-  <%= job_form.text_field :company_name, label: 'Company name (optional)' %>
-  <%= job_form.link_to_remove "Remove this job" %>
-<% end %>
-<p><%= f.link_to_add "Add a job", :jobs %></p>
+  	<div class="form-inputs">
+  		<div class ="module"></div>
+		<b>You job status</b><br><br>
+			<%= f.input :silicon_valley, label: "Targeted job", inline_label: 'I am interested in full-time positions as an iOS developer in Silicon Valley.' %>
+			<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
+			<%= f.input :general_min_yearly_salary, label: 'Min annual salary', placeholder: 'e.g. "65000"', hint: 'your minimum desired annual salary (USD)' %>
+		  	<%= f.input :notice_period, label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start (in weeks)?'%>
+		 
+		<div class ="module"></div>
+		<b> Your iOS apps </b>
+		<br><br> 
+		<%= f.input :ios_apps, label: 'Apps in the app-store', hint: 'Number of iOS apps that you built yourself, not in a team.' %>
+		<%= f.input :ios_years, label: 'Experience', placeholder: 'e.g. "2.5"', hint: 'Number of years programming iOS apps' %>
+		<div class ="module"></div>
+		<b>Work experience</b><br><br>
 
+		<%= f.fields_for :jobs do |job_form| %>
+		
+		  	<%= job_form.input :company_name, label: 'Company name (optional)' %>
+		  	<%= job_form.input :company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
+		  	<%= job_form.association :position, label: 'Position', prompt: "Select position" %>
+		  	<%= job_form.input :team_size, label: 'Number of people you led (if you were Team Lead or CTO)', placeholder: 'e.g. "5"' %>
+		  	<%= job_form.association :platforms, as: :check_boxes, label: 'Mobile platform' %>
+		  	<%= job_form.association :skills, as: :check_boxes, label: 'Skills applied by you' %>
+		  	<%= job_form.input :start_date, label: 'Start date' %>
+		  	<%= job_form.input :end_date, label: 'End date' %>
+		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
+		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
+		  	<%= job_form.input :annual_salary, label: 'Annual salary (USD) if full-time', placeholder: 'e.g. "65000"' %>
+		  	<%= job_form.input :hourly_salary, label: 'Hourly salary (USD) if part-time', placeholder: 'e.g. "50"' %>
+		  	<%= job_form.link_to_remove "[-] Remove the above work experience" %>
+		  	<br><br>
+		<div class ="slim_module"></div>
 
+		<% end %>
 
-<b> Your current or last job at which you built a mobile app </b>
-<br><br>
-	<%= f.input :latest_job_company_name, label: 'Company name (optional)' %>
-	<%= f.input :latest_job_company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
-	<%= f.association :latest_job_position, label: 'Position', prompt: "Select position" %>
-	<%= f.input :latest_job_team_size, label: 'Number of people you led (if you were Team Lead or CTO)', placeholder: 'e.g. "5"' %>
-	<%= f.association :current_platforms, as: :check_boxes, label: 'Mobile platform' %>
-	<%= f.association :current_skills, as: :check_boxes, label: 'Skills applied by you' %>
-	<%= f.input :latest_job_start_date, label: 'Start date' %>
-	<%= f.input :latest_job_end_date, label: 'End date' %>
-	<%= f.input :latest_job_current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
-	<%= f.input :latest_job_contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
-	<%= f.input :latest_job_annual_salary, label: 'Annual salary (USD) if full-time', placeholder: 'e.g. "65000"' %>
-	<%= f.input :latest_job_hourly_salary, label: 'Hourly salary (USD) if part-time', placeholder: 'e.g. "50"' %>
-	<br>
-	<b> Your job before your current or last job at which you built a mobile app </b><br><br>
-	<%= f.input :previous_job_company_name, label: 'Company name (optional)' %>
-	<%= f.input :previous_job_company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
-	<%= f.association :previous_job_position, label: 'Position', prompt: "Select position" %>
-	<%= f.input :previous_job_team_size, label: 'Number of people you led (if you were Team Lead or CTO)', placeholder: 'e.g. "5"' %>
-	<%= f.association :previous_platforms, as: :check_boxes, label: 'Mobile platform' %>
-	<%= f.association :previous_skills, as: :check_boxes, label: 'Skills applied by you' %>
-	<%= f.input :previous_job_start_date, label: 'Start date' %>
-	<%= f.input :previous_job_end_date, label: 'End date' %>
-	<%= f.input :previous_job_contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract" %>
-	<%= f.input :previous_job_annual_salary, label: 'Annual salary (USD) if full-time', placeholder: 'e.g. "65000"' %>
-	<%= f.input :previous_job_hourly_salary, label: 'Hourly salary (USD) if part-time', placeholder: 'e.g. "50"' %>
+		<p><%= f.link_to_add "[+] Add a work experience", :jobs %></p>
 
-<br><br>
+		<div class ="module"></div>
+		<b>Education</b><br><br>
+		<%= f.simple_fields_for :degrees do |degree_form| %>
+		  	<%= degree_form.input :level, collection: [["Highschool",1], ["College/Undergraduate",2], ["Master/Graduate",3], ["Postgraduate/PhD",3]], prompt: "Select degree", label: 'Degree' %>
+		<%= degree_form.input :school_name, label: "School/college/university", placeholder: 'e.g. "University of California, Berkeley"'  %>
+		<%= degree_form.association :subject, prompt: "Select suject", label: "Your major/main subject" %>
+		<%= degree_form.input :gpa, label: "Your GPA", placeholder: 'e.g. "3.65"' %>
+
+		  	<%= degree_form.link_to_remove "[-] Remove the above degree" %>
+		  	  	<br><br>
+		<div class ="slim_module"></div>
+		<% end %>
+		<p><%= f.link_to_add "[+] Add a degree", :degrees %></p>
+<div class ="module"></div>
 <b> Standardized test scores </b>
 <br><br>
-	<%= f.input :sat_math, label: 'SAT math', placeholder: 'e.g. "515"' %>
-	<%= f.input :sat_critical_reading, label: 'SAT critical reading', placeholder: 'e.g. "501"' %>
-	<%= f.input :sat_writing, label: 'SAT writing', placeholder: 'e.g. "493"' %>
-	<%= f.input :act_english, label: 'ACT English', placeholder: 'e.g. "18"' %>
-	<%= f.input :act_math, label: 'ACT math', placeholder: 'e.g. "22"' %>
-	<%= f.input :act_reading, label: 'ACT reading', placeholder: 'e.g. "21"' %>
-	<%= f.input :act_science, label: 'ACT science', placeholder: 'e.g. "24"' %>
-<br><br>
-	<b>	Undergraduate/college education </b>
-<br><br>
-	<%= f.input :undergrad_degree, label: false, inline_label: 'I hold an undergraduate degree.' %>
-		<%= f.association :undergrad_institution, label: 'Undergraduate institution/college', prompt: "Select institution/university" %>
-	<%= f.association :undergrad_subject, label: 'Undergraduate/College major', prompt: "Select major" %>
-	<%= f.input :undergrad_gpa, label: 'Undergraduate/College GPA', placeholder: 'e.g. "3.65"' %>
-	<br>
-<b>	Graduate education </b>
-<br><br>
-	<%= f.input :grad_degree, label: false, inline_label: 'I hold a graduate degree.' %>
-	<%= f.association :grad_institution, label: 'Graduate institution', prompt: "Select institution/university" %>
-	<%= f.association :grad_subject, label: 'Graduate subject', prompt: "Select subject" %>
-	<%= f.input :grad_gpa, label: 'Graduate GPA', placeholder: 'e.g. "3.65"' %>
-<br>
-<b>	Postgraduate education </b>
-<br><br>
-	<%= f.input :postgrad_degree, label: false, inline_label: 'I hold a postgraduate degree.' %>
-	<%= f.association :postgrad_institution, label: 'Postgraduate institution', prompt: "Select institution/university" %>
-	<%= f.association :postgrad_subject, label: 'Postgraduate subject', prompt: "Select subject" %>
-	<%= f.input :postgrad_gpa, label: 'Postgraduate GPA', placeholder: 'e.g. "3.65"' %>
-	<br>
-
-<br>
+<%= f.simple_fields_for :test_scores do |test_score_form| %>
+		  	<%= test_score_form.input :test_type, collection: [["SAT math",1], ["SAT critical reading",2], ["SAT writing",3], ["ACT English",4], ["ACT math",5], ["ACT reading",6], ["ACT science",7]], prompt: "Select test type", label: 'Test type' %>
+		<%= test_score_form.input :score, label: "Score", placeholder: 'e.g. "501"'  %>
+		
+		  	<%= test_score_form.link_to_remove "[-] Remove the above test score" %>
+		  	  	<br><br>
+		<div class ="slim_module"></div>
+		<% end %>
+		<p><%= f.link_to_add "[+] Add a test score", :test_scores %></p>
+<div class ="module"></div>
+	
 <b>	Confirm accuracy </b>
 <br><br>
 
