show nested profile

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -6,7 +6,7 @@
 		<b>You job status</b><br><br>
 			<%= f.input :silicon_valley, label: "Targeted job", inline_label: 'I am interested in full-time positions as an iOS developer in Silicon Valley.' %>
 			<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
-			<%= f.input :general_min_yearly_salary, label: 'Min annual salary', placeholder: 'e.g. "65000"', hint: 'your minimum desired annual salary (USD)' %>
+			<%= f.input :general_min_yearly_salary, label: 'Min annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (USD)' %>
 		  	<%= f.input :notice_period, label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start (in weeks)?'%>
 		 
 		<div class ="module"></div>
