--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -1,17 +1,18 @@
 <tr onclick="location.href='<%=profile_path(invitation.candidate.profile)%>';" style="cursor:pointer">
+	
+
 	<td>
-		<%= invitation.candidate.profile.latest_job_position.name if invitation.candidate.profile.latest_job_position %>
+		<%= invitation.candidate.profile.jobs.first.position.name if invitation.candidate.profile.jobs.first %>
 	</td>
 
 	<td>
-		<% invitation.candidate.profile.platforms.each do |platform| %>
-		  		<%= platform.name %> 
-		<%end%> 
+	
+		<%= invitation.candidate.profile.platforms.map(&:name).join(", ") %>
 	</td>
 	<td>
 		<%= invitation.candidate.profile.ios_years %>
 	</td>		
 	<td>
 		<%= display_education_level(invitation.candidate.profile.education_level) %>
-	</td>		
+	</td>	
   </tr>
