--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
               <%= link_to "Log In", login_path %>
             <% end %>
             <br><br>
-          
+          Current query: <%= current_query.id %> Search term: "<%= current_query.search_term %>"
           <br><br>
         </div>
         <div class="span12">
