--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -2,10 +2,10 @@
     <thead>
     <tr>
       <th>Name</th>
-      <th>Latest position</th>
+      <th>Highest achieved position</th>
       <th>Platform</th>
       <th>Experience in years</th>
-      <th>Degree</th>
+      <th>Highest degree</th>
  
 
       
