--- a/app/views/profiles/_filter_table.html.erb
+++ b/app/views/profiles/_filter_table.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
 <div class ="span8">
-	<h3>iOS hackers open for new full-time challenges</h3>
+	<h3>iOS hackers open for new  <br>full-time challenges in the Bay Area</h3>
 	<br>
   <%= render 'profiles/table' %>
 </div> 
 <div class ="span3">
-	<br>
+
 	<h4>Search and filter</h4>
 	<br>
   <%= render 'queries/form' %>
