--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -2,15 +2,18 @@
   <%= f.error_notification %>
   <div class="form-inputs">
 
-  	<%= f.input :search_term, label: "Search term" %>
-  	<%= f.input :max_notice_period %>
-  	<%= f.input :max_salary %>
-    <%= f.association :min_highest_position %>
-  	<%= f.input :min_degree, collection: [["Undergraduate/College",2], ["Graduate",3], ["Postgraduate", 4]], prompt: "Select minimum degree", label: 'Minimum degree' %>
+  	<%= f.input :search_term, placeholder: 'e.g. "iOS" or "Stanford"', label: "Search term" %>
+
+    <%= f.association :min_highest_position, :include_blank => "None", prompt: "Select position", label: "Min. highest achieved position" %>
+  	<%= f.input :min_degree,:include_blank => "None", collection: [["Undergraduate/College",2], ["Graduate",3], ["Postgraduate", 4]], prompt: "Select minimum degree", label: 'Minimum degree' %>
+
+    <%= f.input :max_salary, placeholder: 'e.g. "100000"', label: 'Maximum expected salary (USD)' %>
+    <%= f.input :max_notice_period, placeholder: 'e.g. "6"', label: 'Maximum notice period (in weeks)' %>
 
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to "reset", :id => @query.id, :action => "reset", :controller =>"queries"  %>
   </div>
 <% end %>
