--- a/app/views/user_mailer/approval.html.erb
+++ b/app/views/user_mailer/approval.html.erb
@@ -10,12 +10,10 @@ Facebook id: <b> <%= link_to "https://www.facebook.com/" + @candidate.uid, "http
 
 <b><u>Profile summary</u></b>
 <br>
-Last/current position: <b><%= @profile.latest_job_position.name if @profile.latest_job_position %></b>
+Highest achieved position: <b><%= @profile.highest_position.name if @profile.highest_position %></b>
 <br>
 Platforms: 
-<b><% @profile.platforms.each do |platform| %>
-		  		<%= platform.name %> 
-		<%end%> 
+<b><%= @profile.platforms.map(&:name).join(", ") %>
 </b>
 <br>
 iOS experience: 
