request status shown in results lists

--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -7,6 +7,7 @@
       <th>Experience in years</th>
       <th>Highest degree</th>
       <th>Last update</th>
+      <th>Your status</th>
       
     </tr>
   </thead>
