--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
 
 <% if current_user %>
 	<% if @approved_invitations.any? %>
-	<h4>Your accepted requests</h4>
+	<h4>Your received contact details</h4>
 	<% @invitations = @approved_invitations %>
 		<%= render "profiles/accepted_invitations_table" %>
 		<br>
