payment error handling

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,7 +7,8 @@
 				<% if find_invitation(@profile).approval.paid == true %>
 				<%= render "profiles/details" %><br><br>
 				<%else%>
-				Unfortunately we were unable to charge your credit card.<br> Please get in touch with out customer service to resubmit your payment details <br> in order to receive the candidate's contact details! <br><br>
+				Unfortunately we were unable to charge your credit card<% if @cu %>: <%= @cu.active_card.type%>, ending in <%= @cu.active_card.last4 %>)<%else%>.<%end%> <br> 
+				Please contact your customer service in order to receive the candidate's contact details! <br><br>
 				<%end%>
 			<%else%>
 			<b>You requested contact details from this candidate <%= time_ago_in_words(find_invitation(@profile).created_at)%> ago.</b>
