fix bug that prevented immediate invitation upon entering payment details for the first time

--- a/app/views/user_mailer/payment_failure.html.erb
+++ b/app/views/user_mailer/payment_failure.html.erb
@@ -7,8 +7,11 @@ Congratulations! Your request for contact details for profile id: <%= @profile.i
 <br>
  <%= @error %>.</b>
 <br><br>
-<%= link_to "Click here to update your payment details.", edit_user_url(@user) %>
+Please contact our customer support in order to charge this order again and to attain access to the contact details for this requested profile. 
 <br><br>
+<%= link_to "Click here to update your payment details for future orders.", edit_user_url(@user) %>
+<br><br>
+
 Yours,
 <br><br>
 The TapCV Team 
