started improving text

--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -1,4 +1,4 @@
-<tr onclick="location.href='<%=profile_path(profile)%>';" style="cursor:pointer">
+<tr onclick="location.href='<%=profile_path(profile)%>';" style="cursor:pointer" title="Click to view full profile">
 	<td>
 		<%= profile.highest_position.name if profile.jobs.first %>
 	</td>
